hphp/hack/test/typecheck/reactive/mayberx14.php.exp
File "mayberx14.php", line 20, characters 3-24:
Conditionally reactive method with condition type '\Rx' cannot be called (Typing[4225])
File "mayberx14.php", line 9, characters 19-19:
Calling such methods is allowed only from conditionally reactive methods with the same condition type or if static type of method receiver is a subtype of condition type, now '\B'.
